--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-router": "^3.0.1",
+    "vue-smooth-scroll": "^1.0.13",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
